--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,6 @@ deploy_to_docker_hub:
     - docker build -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_TAG" -t "$CI_REGISTRY_IMAGE:latest" --build-arg VERSION=$CI_COMMIT_TAG --build-arg VCS_REF=$CI_COMMIT_SHA --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') .
     - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_TAG"
     - docker push "$CI_REGISTRY_IMAGE:latest"
-    - docker rmi grafolean/grafolean:$CI_COMMIT_TAG
-    - docker rmi grafolean/grafolean:latest
+    - docker rmi grafolean/grafolean-worker-ping:$CI_COMMIT_TAG
+    - docker rmi grafolean/grafolean-worker-ping:latest
 
