--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 requests = "*"
 multiping = "*"
+apscheduler = "*"
+ansicolors = "*"
 
 [requires]
 python_version = "3.6"
