--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
   # BACKEND_URL=...   # backend API base url (the part before "/api/...")
   # BOT_TOKEN=...     # bot token
 
-  grafolean-worker-ping:
+  grafolean-collector-ping:
     # If you wish to load an explicit version, change the next line. For example:
-    #   image: grafolean/grafolean-worker-ping:v1.0.0
-    image: grafolean/grafolean-worker-ping
+    #   image: grafolean/grafolean-collector-ping:v1.0.0
+    image: grafolean/grafolean-collector-ping
     build:
       context: .
       dockerfile: Dockerfile
