--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,18 @@ services:
     # If you wish to load an explicit version, change the next line. For example:
     #   image: grafolean/grafolean-collector-ping:v1.0.0
     image: grafolean/grafolean-collector-ping
+    container_name: grafolean-collector-ping
     build:
       context: .
       dockerfile: Dockerfile
-    volumes:
-      - .env:/etc/environment
+    environment:
+      # Backend url must be set to the address of the Grafolean backend, for example this uses Grafolean hosted service:
+      # - BACKEND_URL=https://grafolean.com/api
+      # IMPORTANT: '127.0.0.1' and 'localhost' are _never_ correct addresses for Grafolean backend, because they translate
+      # to container, not host.
+      - BACKEND_URL=${BACKEND_URL}
+      # To use PING Collector, a bot with the protocol "ping" must be added via user interface, then the token needs to be copied here:
+      - BOT_TOKEN=${BOT_TOKEN}
+      # Interval between fetching information about jobs:
+      - JOBS_REFRESH_INTERVAL=${JOBS_REFRESH_INTERVAL:-60}
+    restart: always
